--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - BayuHub</title>
+    <!-- Link to the provided CSS files -->
     <link rel="stylesheet" href="../style/sign-up-style.css">
+    <link rel="stylesheet" href="../style/NAVstyle.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../html/index.html">Bayuhub</a></li>
-                <li><a href="../php/women.php">Women</a></li>
-                <li><a href="../php/men.php">Men</a></li>
-                <li><a href="../php/clothing-types.php">Clothing Types</a></li>
-                <li><a href="../php/sizes.php">Sizes</a></li>
-            </ul>
+        <nav class="top">
+            <div class="nav-links">
+                <a href="../html/index.html">Bayuhub</a>
+                <a href="../php/women.php">Women</a>
+                <a href="../php/men.php">Men</a>
+                <a href="../php/clothing-types.php">Clothing Types</a>
+                <a href="../php/sizes.php">Sizes</a>
+            </div>
         </nav>
     </header>
     <main>
         <section class="sign-up" id="sign-up">
             <h1>Sign Up</h1>
             <form action="../php/register.php" method="post">
-
                 <label for="email">Email Address:</label>
                 <input type="email" id="email" name="email" required placeholder="Enter your email"><br>
 
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" 
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+                    pattern="(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
                     title="Must contain at least one number, one uppercase and lowercase letter, and at least 8 characters" 
                     required placeholder="Create a strong password"><br>
 
@@ -37,8 +38,10 @@
                     required placeholder="Re-enter your password"><br>
 
                 <label for="gender">Gender:</label>
-                <input type="radio" name="gender" id="m" value="Male" required> Male
-                <input type="radio" name="gender" id="f" value="Female" required> Female<br>
+                <div class="gender-container">
+                    <label for="m"><input type="radio" name="gender" id="m" value="Male" required> Male</label>
+                    <label for="f"><input type="radio" name="gender" id="f" value="Female" required> Female</label>
+                </div><br>
 
                 <label for="username">Username:</label>
                 <input type="text" name="username" id="username" required placeholder="Choose a username"><br>
